# datelib

./: .gitignore  README.md  TODO.md  pyproject.toml
benchmarks/: compare.py  indexer_adapter.py  test_indexer_adapter.py
src/antequem/: __init__.py  bounds.py  formatter.py  parser.py  result.py  validate.py
src/antequem/natlang/: __init__.py  coerce.py
src/datelib/: __init__.py  bounds.py  formatter.py  parser.py  result.py  types.py  validate.py
src/datelib/natlang/: __init__.py  coerce.py
tests/: test_bounds.py  test_coerce.py  test_parser.py  test_validate_and_format.py
